--- a/Makefile.rules
+++ b/Makefile.rules
@@ -421,15 +421,29 @@ $(out)/tags: $(out)/cscope.files
 	$(call quiet,ctags,CTAGS  )
 
 # TODO: optional make rules for PROJECT_EXTRA
-$(npcx-flash-fw-bin):
+$(npcx-monitor-fw-bin):
 	$(if $(V),,@echo '  EXTBIN ' $(subst $(out)/,,$@) ; )
 	-@ mkdir -p $(@D)
-	-@ $(CC) $(CFLAGS) -MMD -MF $(out)/$(npcx-lfw).d -c $(npcx-flash-fw).c \
-		-o $(out)/$(npcx-flash-fw).o
-	-@ $(CC) $(out)/$(npcx-flash-fw).o $(LDFLAGS) \
-		-o $(out)/$(npcx-flash-fw).elf -Wl,-T,$(npcx-flash-fw).ld \
-		-Wl,-Map,$(out)/$(npcx-flash-fw).map
-	-@ $(OBJCOPY) -O binary $(out)/$(npcx-flash-fw).elf $@
+	-@ $(CC) $(CFLAGS) -MMD -MF $(out)/$(npcx-lfw).d -c $(npcx-monitor-fw).c \
+		-o $(out)/$(npcx-monitor-fw).o
+	-@ $(CC) $(out)/$(npcx-monitor-fw).o $(LDFLAGS) \
+		-o $(out)/$(npcx-monitor-fw).elf -Wl,-T,$(npcx-monitor-fw).ld \
+		-Wl,-Map,$(out)/$(npcx-monitor-fw).map
+	-@ $(OBJCOPY) -O binary $(out)/$(npcx-monitor-fw).elf $@
+
+$(out)/$(npcx-monitor-hdr)_ro.o:$(npcx-monitor-hdr).c
+	-@ $(CC) $(CFLAGS) -D SECTION_IS_RO -MMD -c $(npcx-monitor-hdr).c -o $@
+
+$(npcx-monitor-hdr-ro-bin):$(out)/$(npcx-monitor-hdr)_ro.o
+	$(if $(V),,@echo '  EXTBIN ' $(subst $(out)/,,$@) ; )
+	-@ $(OBJCOPY) -O binary $< $@
+
+$(out)/$(npcx-monitor-hdr)_rw.o:$(npcx-monitor-hdr).c
+	-@ $(CC) $(CFLAGS) -MMD -c $(npcx-monitor-hdr).c -o $@
+
+$(npcx-monitor-hdr-rw-bin):$(out)/$(npcx-monitor-hdr)_rw.o
+	$(if $(V),,@echo '  EXTBIN ' $(subst $(out)/,,$@) ; )
+	-@ $(OBJCOPY) -O binary $< $@
 
 .PHONY: xrefs
 xrefs: $(call targ_if_prog,etags,$(out)/TAGS) \
